Add PostsController for v1

--- a/TweetBook/TweetBook/TweetBook.csproj
+++ b/TweetBook/TweetBook/TweetBook.csproj
@@ -5,6 +5,14 @@
     <UserSecretsId>aspnet-TweetBook-E9B34BD0-571A-4458-9330-3DEA1ADD035C</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.12" />
@@ -15,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Domain\" />
     <Folder Include="Options\" />
   </ItemGroup>
 
